# opencv_linux

./: README.md
cpp_opencv/: CMakeLists.txt  amakeexe.sh  bcme.sh  demo.cpp  demo.h  exe.sh  main.cpp  main.h  test.cpp  test.h  utils.cpp  utils.h
python_opencv/: test01.py
python_opencv/geometric_transform/: img_getr.py  test01.py
